2.61    * add CONFIGURE_REQUIRES META
        * add --gdlib_config_path
        * add Image Filters: scatter, pixelate, negate, grayscale, brightness,
          contrast, color, selectiveBlur, edgeDetectQuick, gaussianBlur, emboss,
          meanRemoval, smooth, copyGaussianBlurred
        * add createPaletteFromTrueColor, neuQuant (but discouraged)
        * add double GD::VERSION
2.60    * add missing methods newFromWBMP, newFromXbm,
          (RT #68784) and some missing docs
        * Add --lib_fontconfig_path, --fcgi options
        * rewrote most of the XS code
        * cleanup Makefile.PL #20
2.59    * error on failing libgd calls
        * fix colorClosestAlpha, colorAllocateAlpha
        * add missing documentation
2.58    * fix VERSION_STRING for 2.0.x
        * honor --lib_gd_path specific gdlib-config
        * Loosen the comparison tests with GDIMAGETYPE ne gd2
        * Improve gdlib-config parsing (PR #17), esp. with 2.0.34
2.57    * fix Jpeg magic number detection RT #26146
        * fix RGB - HSV roundtrips: RT #120572 by J2N-FORGET
        * fix -print-search-dirs errors RT #106265
        * co-maint to rurban
        * add hv_fetchs, CI smokers
        * add GD::VERSION_STRING api
2.56_03 * add alpha method
        * improve option handling
        * fix meta data
2.56_02 * fix feature extraction >= 2.2 [RT #119459]
2.56_01 * rm Build.PL, fix permissions, fix for missing gdlib-config
2.56	* Fix Makefile.PL so that it works again.
2.55	* Great simplification of regression framework ought to fix make test problems.
	* Replace ExtUtils::MakeMaker script with Module::Build system
	  (just in time for Module::Build to be deprecated).
	* Remove archaic qd.pl (for creating QuickDraw picts) from distribution.
2.54	Patch from yurly@unet.net to fix image corruption in rotate180 when image height is odd.
2.53	Points to Gabor Szabo's GD::Simple tutorial, and fix link to repository.
2.52    Fix regression tests to run on Ubuntu 12.04 64bit.