@@ -3,7 +3,8 @@
         * add Image Filters: scatter, pixelate, negate, grayscale, brightness,
           contrast, color, selectiveBlur, edgeDetectQuick, gaussianBlur, emboss,
           meanRemoval, smooth, copyGaussianBlurred
-        * add createPaletteFromTrueColor, neuQuant (but discouraged)
+        * add palette methods: createPaletteFromTrueColor,
+          neuQuant (but discouraged), colorMatch.
         * add double GD::VERSION
 2.60    * add missing methods newFromWBMP, newFromXbm,
           (RT #68784) and some missing docs
